Fix Dialog support on mobile
* Set overflow: hidden on html and body, like when we open an inspector,
  to avoid vertical scrollbar.
* Animate the global overlay instead of mobile context (reuse sliding
  animation for Dialogs).

--- a/modules/ve/ui/styles/ve.ui.MobileSurface.css
+++ b/modules/ve/ui/styles/ve.ui.MobileSurface.css
@@ -1,5 +1,5 @@
 /*!
- * VisualEditor UserInterface MobileContext styles.
+ * VisualEditor UserInterface MobileSurface styles.
  *
  * @copyright 2011-2014 VisualEditor Team and others; see AUTHORS.txt
  * @license The MIT License (MIT); see LICENSE.txt
@@ -8,15 +8,6 @@
 /* Most vendor prefixes are not needed on mobile devices */
 /*csslint compatible-vendor-prefixes:false */
 
-.ve-ui-mobileContext-visible {
-	position: absolute;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	background: #fff;
-}
-
-/* XXX move to a different file */
 .ve-ui-surface-overlay-global {
 	height: 100%;
 	-webkit-transform: translate3d(0, -100%, 0);
@@ -34,10 +25,4 @@
 .ve-ui-mobileSurface-globalOverlay-enabled {
 	height: 100%;
 	overflow: hidden;
-}
-
-/* inspector styles */
-
-.ve-ui-mobileContext .oo-ui-frame {
-	width: 100%;
 }
